--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -161,13 +161,13 @@
 
           <!-- Categories Widget -->
           <div class="card my-4">
-            <h5 class="card-header">Categories</h5>
+            <h5 class="card-header">Links</h5>
             <div class="card-body">
               <div class="row">
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">Web Design</a>
+                      <a href="https://github.com/kenjiwilkins">github</a>
                     </li>
                     <li>
                       <a href="#">HTML</a>
