--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -75,7 +75,7 @@
 
           <!-- Pagination -->
           <ul class="pagination justify-content-center mb-4">
-            <%if(pagenation.older){%>
+            <%if(pagenation.older == true){%>
             <li class="page-item">
               <a class="page-link" href="/pages/<%=pagenation.currentPage+1%>">&larr; Older</a>
             </li>
@@ -106,18 +106,20 @@
 
           <!-- Search Widget -->
           <div class="card my-4">
-            <h5 class="card-header">Search</h5>
+            <h5 class="card-header">Search(not working yet)</h5>
             <div class="card-body">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
-              </div>
+              <form action="/search/1" method="GET">
+                <div class="input-group">
+                  <input type="text" class="form-control" id="query" name="query" placeholder="Search for...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-secondary" type="submit">Go!</button>
+                  </span>
+                </div>
+              </form>  
             </div>
           </div>
 
-          <!-- Categories Widget -->
+          <!-- Links Widget -->
           <div class="card my-4">
             <h5 class="card-header">Links</h5>
             <div class="card-body">
@@ -152,11 +154,16 @@
             </div>
           </div>
 
-          <!-- Side Widget -->
+          <!-- login -->
           <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
+            <h5 class="card-header">Login</h5>
             <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+              <div class="form-group">
+                <input type="text" name="userMail" placeholder="email address">
+                <input type="password" name="userPass" placeholder="password">
+                <br/><a href="#">sign up?(unavailable)</a><br/>
+                <button type="submit" class="btn btn-primary">Login</button>
+              </div>
             </div>
           </div>
 
