--- a/src/views/post.ejs
+++ b/src/views/post.ejs
@@ -162,13 +162,36 @@
             </div>
           </div>
 
-          <!-- Side Widget -->
+          <!-- login -->
+          <%if(!logininfo.login){%>
           <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
+            <h5 class="card-header">Login</h5>
             <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+              <div class="form-group">
+              <form action="/" method="POST">
+                <input type="text" name="username" id="username" placeholder="user name">
+                <input type="password" name="password" id="password" placeholder="password">
+                <br/><a href="#">sign up?(unavailable yet)</a><br/>
+                <button type="submit" class="btn btn-primary">Login</button>
+              </form>
+              </div>
             </div>
           </div>
+          <%}else{%>
+          <div class="card my-4">
+            <h5 class="card-header">Hello <%=logininfo.userinfo.userName%></h5>
+            <div class="card-body">
+              <div class="form-group">
+              <form action="/account" method="GET">
+                <button type="submit" class="btn btn-primary">Account Setting</button>
+              </form><br>
+              <form action="/logout" method="GET">
+                <button type="submit" class="btn btn-primary">Logout</button>
+              </form>
+              </div>
+            </div>
+          </div>
+          <%}%>
 
         </div>
 
